--- a/templates/mensagem.html
+++ b/templates/mensagem.html
@@ -30,6 +30,34 @@
             <button type="submit">ENVIAR</button>
         </form>        
     </div>
+
+    <!-- Exibição das mensagens com opção de exclusão para o professor -->
+    <div class="container-mensagens-enviadas">
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Turma</th>
+                    <th>Mensagem</th>
+                    <th>Ação</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for mensagem in lista_mensagens %}
+                <tr>
+                    <td><small>{{ mensagem['turma'] }}</small> <!-- Exibe a turma da mensagem --></td>
+                    <td>{{ mensagem['mensagem'] }}</td>
+                    <td>
+                        <form action="/excluir_mensagem" method="POST" style="display:inline;">
+                            <input type="hidden" name="mensagem_id" value="{{ mensagem['cod_mensagem'] }}">
+                            <button type="submit" class="btn-excluir">EXCLUIR MENSAGEM</button>
+                        </form> 
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <!-- Fim da seção de mensagem do professor -->
