Alterações e mudanças estruturais 25.10

--- a/static/styles/pagina-inicial.css
+++ b/static/styles/pagina-inicial.css
@@ -29,7 +29,7 @@ body, html {
 }
 
 .titulo-destaque .part1 {
-  font-size: 19rem;
+  font-size: 22rem;
   color: var(--cor-titulo1-pgInicial);
   opacity: 0.7;
   font-family: "Unlock", serif;
@@ -39,7 +39,7 @@ body, html {
 }
 
 .titulo-destaque .part2 {
-  font-size: 19rem;
+  font-size: 22rem;
   color: var(--cor-titulo2-pgInicial);
   font-family: "Unlock", serif;
   font-weight: 400;
@@ -47,7 +47,7 @@ body, html {
 }
 
 .titulo-destaque .partG {
-  font-size: 19rem;
+  font-size: 22rem;
   color: var(--cor-titulo1-pgInicial);
   opacity: 0.7;
   font-family: "Unlock", serif;
@@ -55,7 +55,6 @@ body, html {
   font-style: normal;
   margin-left: 0.5rem;
 }
-
 
 
 .container-grid {
@@ -109,14 +108,13 @@ body, html {
   overflow: hidden;
   display: flex;
   /*MARGEM EXTERNA*/
-  margin: 5.5rem;
+  margin: 8rem;
   margin-top: 10rem;
   /*FLUTUAR*/
   float: left;
   /*LARGURA DO CARD.*/
   width: 70%;
-  /*COR DE FUNDO DO CARD*/
-  height: 130%;
+  height: 150%;
   /*CENTRALIZA O TEXTO*/
   /*SUAVIZAR EFEITO DA TRANSIÇÃO*/
   transition: transform 0.5s;
@@ -180,11 +178,11 @@ body, html {
 .mensagem p{
   color: var(--cor-msg-professor);
   font-size: 1.6rem;
-  font-family: "Julius Sans One", sans-serif;
+  font-family:Georgia, 'Times New Roman', Times, serif;
   font-weight: 400;
   font-style: normal;
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   padding: 2rem;
 }
 
