--- a/templates/estoque.html
+++ b/templates/estoque.html
@@ -18,7 +18,7 @@
 
             <div class="cadastramento-titulo">
                 <span class="controle1">CONTROLE DE</span>
-                <span class="controle2">ESTOQUE</span>
+                <span class="controle2">ENTRADA E SAÍDA</span>
             </div>
 
             <div class="container-img"></div>
