--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,7 +56,7 @@
                             </div>
 
                             <div class="card">
-                                <a href="/login"><i class="fa-solid fa-users"></i> Conecte-se</a>
+                                <a href="/cadastro"><i class="fa-solid fa-users"></i> Conecte-se</a>
                             </div>
 
                             <div class="card">
@@ -72,7 +72,7 @@
                             </div>
 
                             <div class="card">
-                                <a href="/estoque">Controle de Estoque</a>
+                                <a href="/estoque">Controle de Entrada e saída</a>
                             </div>
 
                             <div class="card">
@@ -81,6 +81,10 @@
 
                             <div class="card">
                                 <a href="/expedicao">Cadastro de Expedição</a>
+                            </div>
+
+                            <div class="card">
+                                <a href="/inventario.html">Inventário</a>
                             </div>
                             {% endif %}
 
