--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -80,7 +80,7 @@
                     <figure><img src="/static/img/caixas.png"></figure>
                     <a href="/estoque">
                     <div class="descricao">
-                        <img src="/static/img/estoque.png" alt="">
+                        <img src="/static/img/controleDeEntradaeSaída.png" alt="entrada e saída">
                     </div>
                     </a>
                 </div>
